--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <header>
-            <div>
-                <img src="logo ideas for portfolio (1).png">
+            <div class="logo">
+                <img src="images/logo ideas for portfolio (1).png">
             </div>
          <nav>
             <ul>
@@ -19,8 +19,8 @@
          </nav>   
         </header>
 
-        <div class="heroImg"
-          <img src="headshot.JPG">
+        <div class="heroImg">
+          <img src="images/headshot.JPG">
          <p>I'm Gaelle, a UX and Product designer, problem solver and passionate about bringing ideas to life.</p>
          <button>Download Resume</button>
         </div>
